Add OpenAI integration for dynamic math question generation and enhance frontend loading indicator

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,16 +10,16 @@
   <div class="container">
     <h1>Math Question Generator</h1>
     <div id="question-display">
-      <!-- The current question will be displayed here -->
       <p>Current Question: <span id="current-question">What is 2 + 2?</span></p>
     </div>
     <button id="wrong-answer-btn">Simulate Wrong Answer</button>
+    <div id="loading" class="hidden">
+      <p>Loading...</p>
+    </div>
     <div id="new-question">
-      <!-- The newly generated question will be displayed here -->
       <p>New Question: <span id="generated-question">None yet</span></p>
     </div>
   </div>
-  
   <script src="script.js"></script>
 </body>
 </html>
